--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,9 +17,9 @@
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
-          <a id="home" href="../index">Home</a>
-          <a id="about" href="../about">About</a>
-          <a id="wiki" href="../wiki">Wiki</a>
+          <a id="home" href="/">Home</a>
+          <a id="about" href="/about">About</a>
+          <a id="wiki" href="/wiki">Wiki</a>
           
 		  <h1 id="project_title">{{ site.title }}</h1>
         </header>
